<resources>
    <string name="app_name">Ticketmon</string>

    <string name="login">LOGIN</string>
    <string name="signup">SIGN-UP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="reset">RESET</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="support">SUPPORT</string>
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>
    <string name="opentickettitle">OPEN A TICKET</string>
    <string name="activeticketstitle">ACTIVE TICKETS</string>

    <string name="openticket">Open a Ticket</string>
    <string name="activetickets">Active Tickets</string>
    <string name="livesupport">Live Support</string>
    <string name="faq">F.A.Q.</string>
    <string name="suggestions">Suggestions</string>


    <!--Put hints under here.-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="real_name_hint">Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="email_hint">E-Mail</string>
    <string name="passwordconf_hint">Password Confirmation</string>
    <string name="tickettitle_hint">Enter a title</string>
    <string name="extrainfo_hint">Enter extra info</string>

</resources>