<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="401dp"
        android:layout_height="329dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="190dp"
        android:layout_height="66dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/med_blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:autofillHints="password"
        android:backgroundTint="@color/med_blue"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#BC1C1C"
        android:backgroundTintMode="add"
        android:onClick="gotoRegister"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>