<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordReset">
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="101dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/textRegisterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-3dp" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="99dp"
        android:layout_height="24dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/med_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="@+id/imageLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textRegisterTitle"
        android:layout_width="304dp"
        android:layout_height="105dp"
        android:text="Password Reset"
        android:textAlignment="center"
        android:textColor="@color/med_blue"
        android:textSize="43.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:layout_marginBottom="324dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailSubject"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:backgroundTint="#BC1C1C"
        android:backgroundTintMode="add"
        android:text="RESET"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif"
        android:onClick="gotoLogin"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <View
        android:id="@+id/border"
        android:layout_width="413dp"
        android:layout_height="104dp"
        android:background="@drawable/titleborder"
        app:layout_constraintEnd_toEndOf="@+id/textRegisterTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="63dp"
        android:layout_height="28dp"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border"
        app:layout_constraintVertical_bias="0.452" />
</androidx.constraintlayout.widget.ConstraintLayout>