<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="98dp"
        android:layout_height="102dp"
        android:background="@android:drawable/editbox_background"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="99dp"
        android:layout_height="24dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/med_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.11"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPhone2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <EditText
        android:id="@+id/editTextUsername4"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="E-Mail"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextUsername3"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="password"
        android:backgroundTint="@color/med_blue"
        android:ems="10"
        android:hint="Password Confirm"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="password"
        android:backgroundTint="@color/med_blue"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="178dp"
        android:layout_height="54dp"
        android:backgroundTint="#BC1C1C"
        android:backgroundTintMode="add"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <EditText
        android:id="@+id/editTextUsername2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:autofillHints="username"
        android:backgroundTint="@color/med_blue"
        android:clickable="false"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/hint_blue"
        app:barrierMargin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:onClick="gotoLogin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="102dp"
        android:background="@android:drawable/editbox_background"
        android:text="SIGN-UP"
        android:textAlignment="center"
        android:textColor="@color/med_blue"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>